<resources>
    <string name="app_name">Chuck Norris by Julia Segal</string>
    <string name="title_joke">Joke</string>
    <string name="title_jokes">Jokes</string>
    <string name="title_notifications">Notifications</string>

    <!--Joke Fragment-->
    <string name="joke_fragment_title">Click a joke, any joke</string>
    <string name="joke_image_info">The Laughing Cavalier</string>
    <string name="joke_fragment_random_button">Random Joke</string>
    <string name="joke_fragment_named_button">Named JOKE</string>

    <!--Jokes Fragment-->
    <string name="jokes_fragment_title">Chuck Norris Everywhere</string>

    <!--Joke Name Activity -->
    <string name="name_title">Name a joke</string>
    <string name="name_instructions">Enter first name and last name:</string>
    <string name="name_hint">Ed Balls</string>
    <string name="name_auto_fill">Ed Balls</string>
    <string name="name_button_done">Get joke</string>
    <string name="name_error_first_last">Please enter FIRST and LAST name.</string>

    <!--Joke Dialog-->
    <string name="joke_dialog_title">Um...</string>
    <string name="joke_dialog_button">okey dokey</string>

</resources>
