...
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        android:textColor="@color/dark_grey"
        android:text="@string/name_instructions"
        app:layout_constraintBottom_toTopOf="@+id/name_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_entry"
...
        android:hint="@string/name_hint"
        android:inputType="textFilter"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/name_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_entry_text"
        tools:ignore="UnusedAttribute" />

    <Button
...
